Agrega servicios.html y barra de navegación a todos los html

--- a/productos.html
+++ b/productos.html
@@ -13,11 +13,10 @@
             </li>
             <li><a href="productos.html"></a>
             </li>
-            <li><a href="servicios"></a>   
+            <li><a href="servicios.html"></a>   
             </li>
         </ul>
     </nav>
-    <h1>Hello Word</h1>
     
 </body>
 </html>
