--- a/servicios.html
+++ b/servicios.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html"></a>
+            </li>
+            <li><a href="productos.html"></a>
+            </li>
+            <li><a href="servicios"></a>   
+            </li>
+        </ul>
+    </nav>
     <h1>Servicios</h1>
     <h2>Servicio</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam officiis assumenda tempore incidunt dolores molestias at magni recusandae voluptatibus illum voluptates porro dolor, dignissimos accusantium accusamus earum. Blanditiis, alias molestiae.</p>
