Agrega descriÂpción a productos

--- a/productos.html
+++ b/productos.html
@@ -17,6 +17,8 @@
             </li>
         </ul>
     </nav>
+    <h1>Productos</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, distinctio quos? Quis nobis sit, cumque aliquam atque, harum animi dolor enim, fuga adipisci voluptas quod praesentium cum consequuntur repudiandae eum.</p>
     
 </body>
 </html>
